# core

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yml
sotalab/core/: __init__.py  env.py  program.py
sotalab/core/config/: __init__.py  registry.py  spec.py  type_utils.py
sotalab/core/utils/: singleton.py  yaml.py
tests/: test.py
