[tool.poetry]
name = "sotalab-core"
version = "0.1.4"
description = "SotaLab"
authors = ["Ming Yang <ymviv@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "sotalab" },
]

[tool.poetry.dependencies]
python = "^3.8"
"ruamel.yaml" = "^0.16.12"

[tool.poetry.dev-dependencies]
isort = "^5.7.0"
flake8 = "^3.8.4"
black = "^20.8b1"
pre-commit = "^2.11.1"
mypy = "^0.812"

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
